syntax = "proto3";

option go_package = "outbox/pb";

service NotificationService {
  rpc AddNotification(AddNotificationRequest) returns (AddNotificationResponse) {}
}

message AddNotificationRequest {
  string eventName = 1 [json_name="eventName"]; 
  string userId = 2 [json_name="userId"]; 
  string message =3 [json_name="message"];
}

message AddNotificationResponse {
  bool success = 1;
  string error = 2; 
}
